--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,7 +63,9 @@
 		<!-- <button onclick="updateDataset();">Update graph</button> -->
 	</div>
 
-	<div id="dygraph-container"></div>
+	<div id="dygraph-wrapper">
+		<div id="dygraph-container"></div>
+	</div>
 
 	<pre id="json"></pre>
 
